@@ -121,8 +121,8 @@ class FunctionPointerTransferRelation extends SingleEdgeTransferRelation {
     String functionCallVariable = getFunctionPointerCall(pCfaEdge);
     if (functionCallVariable != null) {
       FunctionPointerTarget target = oldState.getTarget(functionCallVariable);
-      if (target instanceof NamedFunctionTarget) {
-        String functionName = ((NamedFunctionTarget) target).getFunctionName();
+      if (target instanceof NamedFunctionTarget namedFunctionTarget) {
+        String functionName = namedFunctionTarget.getFunctionName();
         logger.logfOnce(
             Level.WARNING,
             "%s: Function pointer %s points to %s,"
@@ -249,11 +249,11 @@ class FunctionPointerTransferRelation extends SingleEdgeTransferRelation {
     }
 
     CStatement statement = ((CStatementEdge) pCfaEdge).getStatement();
-    if (!(statement instanceof CFunctionCall)) {
+    if (!(statement instanceof CFunctionCall cFunctionCall)) {
       return null;
     }
 
-    CFunctionCallExpression funcCall = ((CFunctionCall) statement).getFunctionCallExpression();
+    CFunctionCallExpression funcCall = cFunctionCall.getFunctionCallExpression();
     CExpression nameExp = funcCall.getFunctionNameExpression();
 
     if ((nameExp instanceof CIdExpression idExp)
@@ -351,11 +351,10 @@ class FunctionPointerTransferRelation extends SingleEdgeTransferRelation {
   private void handleDeclaration(FunctionPointerState.Builder pNewState, CDeclarationEdge declEdge)
       throws UnrecognizedCodeException {
 
-    if (!(declEdge.getDeclaration() instanceof CVariableDeclaration)) {
+    if (!(declEdge.getDeclaration() instanceof CVariableDeclaration decl)) {
       // not a variable declaration
       return;
     }
-    CVariableDeclaration decl = (CVariableDeclaration) declEdge.getDeclaration();
 
     // get name of declaration
     String name = decl.getQualifiedName();
@@ -365,8 +364,8 @@ class FunctionPointerTransferRelation extends SingleEdgeTransferRelation {
 
     if (decl.getInitializer() != null) {
       CInitializer init = decl.getInitializer();
-      if (init instanceof CInitializerExpression) {
-        initialValue = getValue(((CInitializerExpression) init).getExpression(), pNewState);
+      if (init instanceof CInitializerExpression cInitializerExpression) {
+        initialValue = getValue(cInitializerExpression.getExpression(), pNewState);
       }
     }
 
@@ -392,9 +391,9 @@ class FunctionPointerTransferRelation extends SingleEdgeTransferRelation {
       FunctionPointerTarget target = pNewState.popTarget();
       pNewState.setTarget(varName, target);
 
-    } else if (pStatement instanceof CAssignment) {
+    } else if (pStatement instanceof CAssignment cAssignment) {
       // assignment like "a = b" or "a = foo()"
-      handleAssignment(pNewState, (CAssignment) pStatement, pCfaEdge);
+      handleAssignment(pNewState, cAssignment, pCfaEdge);
 
     } else if (pStatement instanceof CFunctionCallStatement callStmt
         && callStmt.getFunctionCallExpression().getFunctionNameExpression()
@@ -407,7 +406,7 @@ class FunctionPointerTransferRelation extends SingleEdgeTransferRelation {
           params.size() == 1,
           "atexit() takes one argument, but it was called with %s",
           params.size());
-      CExpression argExpr = params.get(0);
+      CExpression argExpr = params.getFirst();
       ExpressionValueVisitor evaluator = new ExpressionValueVisitor(pNewState);
       FunctionPointerTarget target = argExpr.accept(evaluator);
       // Note: We want AtExitState.peek() to only return NullTarget when the stack is actually
@@ -493,8 +492,8 @@ class FunctionPointerTransferRelation extends SingleEdgeTransferRelation {
     assert summaryEdge != null;
 
     CFunctionCall funcCall = pFunctionReturnEdge.getFunctionCall();
-    if (funcCall instanceof CFunctionCallAssignmentStatement) {
-      CExpression left = ((CFunctionCallAssignmentStatement) funcCall).getLeftHandSide();
+    if (funcCall instanceof CFunctionCallAssignmentStatement cFunctionCallAssignmentStatement) {
+      CExpression left = cFunctionCallAssignmentStatement.getLeftHandSide();
       String varName = getLeftHandSide(left, summaryEdge);
       if (varName != null) {
         Optional<CVariableDeclaration> returnValue =
@@ -517,9 +516,9 @@ class FunctionPointerTransferRelation extends SingleEdgeTransferRelation {
   private String getLeftHandSide(CExpression lhsExpression, CFAEdge edge)
       throws UnrecognizedCodeException {
 
-    if (lhsExpression instanceof CIdExpression) {
+    if (lhsExpression instanceof CIdExpression cIdExpression) {
       // a = ...
-      return ((CIdExpression) lhsExpression).getDeclaration().getQualifiedName();
+      return cIdExpression.getDeclaration().getQualifiedName();
 
     } else if (lhsExpression instanceof CPointerExpression) {
       // *a = ...
