@@ -118,8 +118,8 @@ public class SMGExpressionEvaluator {
       CFAEdge edge, CType pType, SMGState pState, Optional<CExpression> pExpression)
       throws CPATransferException {
 
-    if (pType instanceof CBitFieldType) {
-      return ((CBitFieldType) pType).getBitFieldSize();
+    if (pType instanceof CBitFieldType cBitFieldType) {
+      return cBitFieldType.getBitFieldSize();
     }
 
     CSizeOfVisitor v = getSizeOfVisitor(edge, pState, pExpression);
@@ -212,32 +212,22 @@ public class SMGExpressionEvaluator {
   }
 
   private SMGField getField(CType pOwnerType, String pFieldName) {
-
-    if (pOwnerType instanceof CElaboratedType) {
-
-      CType realType = ((CElaboratedType) pOwnerType).getRealType();
-
-      if (realType == null) {
-        return SMGField.getUnknownInstance();
+    return switch (pOwnerType) {
+      case CElaboratedType cElaboratedType -> {
+        CType realType = cElaboratedType.getRealType();
+        if (realType == null) {
+          yield SMGField.getUnknownInstance();
+        }
+        yield getField(realType, pFieldName);
       }
+      case CCompositeType cCompositeType -> getField(cCompositeType, pFieldName);
 
-      return getField(realType, pFieldName);
-    } else if (pOwnerType instanceof CCompositeType) {
-      return getField((CCompositeType) pOwnerType, pFieldName);
-    } else if (pOwnerType instanceof CPointerType) {
-
-      /* We do not explicitly transform x->b,
-      so when we try to get the field b the ownerType of x
-      is a pointer type.*/
-
-      CType type = ((CPointerType) pOwnerType).getType();
-
-      type = TypeUtils.getRealExpressionType(type);
-
-      return getField(type, pFieldName);
-    }
-
-    throw new AssertionError();
+      case CPointerType cPointerType -> {
+        CType type = TypeUtils.getRealExpressionType(cPointerType.getType());
+        yield getField(type, pFieldName);
+      }
+      default -> throw new AssertionError();
+    };
   }
 
   private SMGField getField(CCompositeType pOwnerType, String pFieldName) {
@@ -277,7 +267,7 @@ public class SMGExpressionEvaluator {
     List<SMGExplicitValueAndState> result = evaluateExplicitValue(smgState, cfaEdge, rValue);
 
     if (result.size() == 1) {
-      return result.get(0).getObject();
+      return result.getFirst().getObject();
     } else {
       return SMGUnknownValue.INSTANCE;
     }
@@ -408,8 +398,8 @@ public class SMGExpressionEvaluator {
 
     if (expressionType instanceof CPointerType
         || (expressionType instanceof CFunctionType
-            && rValue instanceof CUnaryExpression
-            && ((CUnaryExpression) rValue).getOperator() == CUnaryExpression.UnaryOperator.AMPER)) {
+            && rValue instanceof CUnaryExpression cUnaryExpression
+            && cUnaryExpression.getOperator() == CUnaryExpression.UnaryOperator.AMPER)) {
       // CFA treats &foo as CFunctionType
 
       PointerVisitor visitor = getPointerVisitor(cfaEdge, pState);
@@ -473,8 +463,7 @@ public class SMGExpressionEvaluator {
             SMGObject target = addressValue.getObject();
             SMGExplicitValue addressOffset = addressValue.getOffset();
 
-            SMGExplicitValue newAddressOffset;
-            newAddressOffset =
+            SMGExplicitValue newAddressOffset =
                 switch (binaryOperator) {
                   case PLUS -> addressOffset.add(pointerOffsetValue);
                   case MINUS -> {
@@ -627,15 +616,15 @@ public class SMGExpressionEvaluator {
   List<SMGAddressValueAndState> getAddressFromSymbolicValue(SMGValueAndState pAddressValueAndState)
       throws SMGInconsistentException {
 
-    if (pAddressValueAndState instanceof SMGAddressValueAndState) {
-      return singletonList((SMGAddressValueAndState) pAddressValueAndState);
+    if (pAddressValueAndState instanceof SMGAddressValueAndState sMGAddressValueAndState) {
+      return singletonList(sMGAddressValueAndState);
     }
 
     SMGValue pAddressValue = pAddressValueAndState.getObject();
     SMGState smgState = pAddressValueAndState.getSmgState();
 
-    if (pAddressValue instanceof SMGAddressValue) {
-      return singletonList(SMGAddressValueAndState.of(smgState, (SMGAddressValue) pAddressValue));
+    if (pAddressValue instanceof SMGAddressValue sMGAddressValue) {
+      return singletonList(SMGAddressValueAndState.of(smgState, sMGAddressValue));
     }
 
     if (pAddressValue.isUnknown()) {
